ORG-2719: Rettet opp en deprecated funksjon